--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,9 @@
     "noImplicitUseStrict":true,//去除严格模式
     "esModuleInterop":true,//启用es模块化交互非es模块化导出
     "noEmitOnError":true,//出错后不编译
-    //"moduleResolution":"node"//设置解析模块的模式
-
+    "moduleResolution":"node",//设置解析模块的模式
+   // "noImplicitAny":true, //开启对隐式any的检查
+   "onImplicitThis":true
 
   },
   "include":["./src"] //编译的路径
